# bot/src/main/java/backend/academy/bot/db/model/NotificationView.java
@@ -1,0 +1,14 @@
+package backend.academy.bot.db.model;
+
+import java.time.OffsetDateTime;
+
+public record NotificationView(
+        Long id,
+        Long linkId,
+        String url,
+        String title,
+        String updateOwner,
+        String description,
+        OffsetDateTime creationDate,
+        OffsetDateTime receivedAt,
+        OffsetDateTime readAt) {}
