# bot/src/main/java/backend/academy/bot/model/api/NotificationListResponse.java
@@ -1,0 +1,5 @@
+package backend.academy.bot.model.api;
+
+import java.util.List;
+
+public record NotificationListResponse(List<NotificationDto> notifications, int limit, int offset) {}
